# GeniusTest

./: .env.example  README.md  benchmark.py  geniustest.py  pyproject.toml
calculator/: .coverage  README.md  coverage.xml  pyproject.toml
calculator/src/calculator/: __init__.py  calculator.py  cli.py
calculator/tests/: test_calculator.py  test_cli.py  test_main.py
